syntax = "proto3";

package centralpb;
option go_package = "github.com/nkust-monitor-iot-project-2024/central/protos/centralpb";

import "eventpb/event.proto";

service Central {
  // TriggerEvent can be used by the client to trigger an event to the central server.
  rpc TriggerEvent(TriggerEventRequest) returns (TriggerEventReply) {}
  // ListEvents lists all the events that have been triggered.
  rpc ListEvents(ListEventsRequest) returns (ListEventsReply) {}

  // RetrieveMovementPicture can retrieve the picture of the movement.
  rpc RetrieveMovementPicture(RetrieveInvaderPictureRequest) returns (RetrieveInvaderPictureReply) {}
  // RetrieveInvaderPicture can retrieve the picture of the invader.
  rpc RetrieveInvaderPicture(RetrieveInvaderPictureRequest) returns (RetrieveInvaderPictureReply) {}
}

message TriggerEventRequest {
  TriggerEventPayload payload = 1;
}

message TriggerEventPayload {
  oneof event {
    eventpb.EventInvaded event_invaded = 1;
    eventpb.EventMovement event_movement = 2;
  }
}

message TriggerEventReply {
}

message ListEventsRequest {
}

message ListEventsReply {
  repeated eventpb.Event events = 1;
}

message RetrieveInvaderPictureRequest {
  string event_id = 1;  // 2fa
  string invader_id = 2;
}

message RetrieveInvaderPictureReply {
  bytes picture = 1;
}
